kp-frontend declared variables as const and used single quotes by strings

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -28,6 +28,7 @@ a+a,a+a.link,a+button.link,a.link+a,a.link+a.link,a.link+button.link,button.link
     overflow-y: scroll;
     overflow-x: hidden;
     background-color: #F8FAFB;
+    padding-left: 10px;
 }
 
 .container{
